Bug 429616 - Ark can't find kpart component.
Summary: Ark can't find kpart component.
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-11-25 02:03 UTC by Tony
Modified: 2020-11-27 05:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The error. (223.24 KB, video/mp4)
2020-11-25 02:03 UTC, Tony
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2020-11-25 02:03:34 UTC
Created attachment 133620 [details]
The error.

SUMMARY

Running ark will present you with a warning about missnig kpart component and to check the instalation.

On terminal it shows this : ark.main: Error loading Ark KPart.


STEPS TO REPRODUCE
1.Open ark. 
2.Se the warning about kpart missing.

Linux/KDE Plasma: 

KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Comment 1 2wxsy58236r3 2020-11-25 07:09:11 UTC
If you are using beta versions or a manually compiled KDE component, you may want to check the dependencies.
Comment 2 Friedrich W. H. Kossebau 2020-11-25 12:13:03 UTC
Patch up for review here: https://invent.kde.org/utilities/ark/-/merge_requests/18
Comment 3 Friedrich W. H. Kossebau 2020-11-27 05:14:20 UTC
Git commit 4c8546dcaf9e2359822a368b8e5864c2db27d2f2 by Friedrich W. H. Kossebau.
Committed on 26/11/2020 at 11:36.
Pushed by kossebau into branch 'master'.

Ark KPart: restore mismatch of componentname and plugin id

By history Ark stores the xmlgui ui.rc file for the part in the same
subdir as the program, ark/. And set the comppnent name as needed to "ark"
via the KAboutData instance for the KPart.
At the same time the plugin id has been "arkpart", as derived from the
library name due to the absence of an explicit X-KDE-PluginInfo-Name entry
in the desktop file.

With the change to the KPluginMetaData API of KParts/KPluginLoader and
the new entries added to the desltop file based on the KAboutData values,
that mismatch was resolved by accident. With "ark" now also the plugin id,
the look up the kpart by the program though now fails, due to the condition
    metaData.pluginId() == QLatin1String("arkpart")

M  +1    -1    part/ark_part.desktop.cmake
M  +10   -0    part/part.cpp
M  +5    -0    part/part.h

https://invent.kde.org/utilities/ark/commit/4c8546dcaf9e2359822a368b8e5864c2db27d2f2