part/ark_part.desktop.cmake
@@ -153,7 +153,7 @@ X-KDE-Library=arkpart
 Type=Service
 MimeType=@SUPPORTED_ARK_MIMETYPES@
 
-X-KDE-PluginInfo-Name=ark
+X-KDE-PluginInfo-Name=arkpart
 X-KDE-PluginInfo-Version=@ARK_VERSION@
 X-KDE-PluginInfo-License=GPL v2+
 X-KDE-PluginInfo-Website=https://utils.kde.org/projects/ark
